@@ -1,8 +1,7 @@
 package com.sjsu.wildfirestorage;
 
-import com.mongodb.client.model.geojson.Polygon;
-import com.mongodb.client.model.geojson.PolygonCoordinates;
-import com.mongodb.client.model.geojson.Position;
+import org.springframework.data.geo.Point;
+import org.springframework.data.mongodb.core.geo.GeoJsonPolygon;
 import ucar.ma2.Array;
 import ucar.ma2.DataType;
 import ucar.nc2.Attribute;
@@ -10,9 +9,10 @@ import ucar.nc2.Dimension;
 import ucar.nc2.NetcdfFile;
 import ucar.nc2.Variable;
 import java.io.IOException;
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
 import java.util.List;
 import java.util.ArrayList;
-import java.util.Calendar;
 import java.util.Date;
 import java.util.Arrays;
 import java.util.regex.Matcher;
@@ -35,8 +35,6 @@ public class NetcdfFileReader {
             throw new RuntimeException(e);
         }
 
-        // @Todo: Try to read the date from the file metadata
-
         Metadata metadata = new Metadata();
         metadata.fileName = netcdfFilepath.substring(netcdfFilepath.lastIndexOf('/')+1);
         metadata.filePath = netcdfFilepath;
@@ -46,6 +44,20 @@ public class NetcdfFileReader {
         metadata.variables = readVariables();
 
         //Special processing @Todo: Find a more efficient way to do this
+        //FileName
+        String[] fileNameParsed = parseName(metadata.fileName);
+        metadata.fileType = (fileNameParsed[0] != null) ? fileNameParsed[0] : null;
+        metadata.domain = (fileNameParsed[1] != null && !fileNameParsed[1].equals("")) ? Integer.parseInt(fileNameParsed[1]) : 0;
+        Date startDateValue = null;
+        if (fileNameParsed[2] != null && !fileNameParsed[2].startsWith("0000")){
+            SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy MM dd HH mm ss");
+            try {
+                startDateValue = dateFormat.parse(fileNameParsed[2]);
+            } catch (ParseException e) {
+                throw new RuntimeException(e);
+            }
+
+        }
         //Wind
         Variable U = netcdfFile.findVariable("U");
         Variable V = netcdfFile.findVariable("V");
@@ -59,6 +71,13 @@ public class NetcdfFileReader {
         Variable times = netcdfFile.findVariable("Times");
         if (times != null) {
             metadata.globalAttributes.addAll(findTime(times));
+        }
+        else if (startDateValue != null) {
+            WildfireAttribute startDate = new WildfireAttribute();
+            startDate.attributeName = "Start Date";
+            startDate.type = "Date";
+            startDate.value = startDateValue;
+            metadata.globalAttributes.add(startDate);
         }
         //Corners
         Variable xlat = netcdfFile.findVariable("XLAT");
@@ -79,8 +98,13 @@ public class NetcdfFileReader {
                     break;
                 }
             }
-            metadata.globalAttributes.add(calculateCorners(xMin, xMax, yMin, yMax));
+            metadata.location = calculateCorners(xMin, xMax, yMin, yMax);
         }
+        else {
+            metadata.location = null;
+        }
+
+//        Client.post( "http://cloud.homeofcode.com:27777/api/metadata", metadata); //Post metadata content
 
 //        printAllData(metadata);
     }
@@ -89,6 +113,12 @@ public class NetcdfFileReader {
         //Print Name and filepath
         System.out.println("Filename: " + metadata.fileName);
         System.out.println("FilePath: " + metadata.filePath);
+        System.out.println("FileType: " + metadata.fileType);
+        System.out.println("Domain: " + metadata.domain);
+        if(metadata.location != null)
+            System.out.println("Corners: " + metadata.location.toString());
+        else
+            System.out.println("Corners: Null");
 
         //Print All Attributes
         System.out.println("\nAttributes");
@@ -101,6 +131,8 @@ public class NetcdfFileReader {
                 System.out.println(Arrays.toString((float[]) a.value));
             else if (a.type.equalsIgnoreCase("string"))
                 System.out.println(Arrays.toString((Object[]) a.value));
+            else if (a.type.equalsIgnoreCase("date"))
+                System.out.println(a.value.toString());
         }
 
         //Print All Variables
@@ -336,55 +368,44 @@ public class NetcdfFileReader {
 
         Pattern pattern = Pattern.compile("(\\d\\d\\d\\d)-(\\d\\d)-(\\d\\d)_(\\d\\d):(\\d\\d):(\\d\\d)");
 
-        Matcher time1Matcher = pattern.matcher(firstTime);
-        Matcher time2Matcher = pattern.matcher(lastTime);
-
-        int time1Year=0, time1Month=0, time1Day = 0, time1Hour=0, time1Minute=0, time1Second=0;
-        int time2Year=0, time2Month=0, time2Day=0, time2Hour=0, time2Minute=0, time2Second=0;
-
-        try {
-            if(time1Matcher.find()) {
-                time1Year = Integer.parseInt(time1Matcher.group(1));
-                time1Month = Integer.parseInt(time1Matcher.group(2));
-                time1Day = Integer.parseInt(time1Matcher.group(3));
-                time1Hour = Integer.parseInt(time1Matcher.group(4));
-                time1Minute = Integer.parseInt(time1Matcher.group(5));
-                time1Second = Integer.parseInt(time1Matcher.group(6));
-            }
-
-            if(time2Matcher.find()) {
-                time2Year = Integer.parseInt(time2Matcher.group(1));
-                time2Month = Integer.parseInt(time2Matcher.group(2));
-                time2Day = Integer.parseInt(time2Matcher.group(3));
-                time2Hour = Integer.parseInt(time2Matcher.group(4));
-                time2Minute = Integer.parseInt(time2Matcher.group(5));
-                time2Second = Integer.parseInt(time2Matcher.group(6));
-            }
-        }
-        catch (NumberFormatException e) {
-            System.out.println("No Date Found");
-            return new ArrayList<>();
-        }
-
-
-        Date date1 = new Calendar.Builder().setDate(time1Year, time1Month, time1Day)
-                .setTimeOfDay(time1Hour, time1Minute, time1Second,0).build().getTime();
-
-        Date date2 = new Calendar.Builder().setDate(time2Year, time2Month, time2Day)
-                .setTimeOfDay(time2Hour, time2Minute, time2Second,0).build().getTime();
-
-        WildfireAttribute startDate = new WildfireAttribute();
-        startDate.attributeName = "Start Date";
-        startDate.type = "Date";
-        startDate.value = date1;
-        WildfireAttribute endDate = new WildfireAttribute();
-        endDate.attributeName = "End Date";
-        endDate.type = "Date";
-        endDate.value = date2;
-
+        String[] dateName = {"Start Date", "End Date"};
+        String[] times = {firstTime, lastTime};
+        SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy MM dd HH mm ss");
         List<WildfireAttribute> dates = new ArrayList<>();
-        dates.add(startDate);
-        dates.add(endDate);
+
+        for (int i = 0; i < dateName.length; i++) {
+            Matcher timeMatch = pattern.matcher(times[i]);
+
+            String year = "0000";
+            String month = "00";
+            String day = "00";
+            String hour = "00";
+            String min = "00";
+            String sec = "00";
+            if (timeMatch.find()) {
+                year = (timeMatch.group(1) == null) ? "0000" : timeMatch.group(1); //Year
+                month = (timeMatch.group(2) == null) ? "00" : timeMatch.group(2); //Month
+                day = (timeMatch.group(3) == null) ? "00" : timeMatch.group(3); //Day
+                hour = (timeMatch.group(4) == null) ? "00" : timeMatch.group(4); //Hour
+                min = (timeMatch.group(5) == null) ? "00" : timeMatch.group(5); //Minute
+                sec = (timeMatch.group(6) == null) ? "00" : timeMatch.group(6); //Seconds
+            }
+            String stringDate = String.format("%s %s %s %s %s %s", year, month, day, hour, min, sec);
+
+            Date dateValue;
+            try {
+                dateValue = dateFormat.parse(stringDate);
+            } catch (ParseException e) {
+                dateValue = null;
+            }
+
+            WildfireAttribute date = new WildfireAttribute();
+            date.attributeName = dateName[i];
+            date.type = "Date";
+            date.value = dateValue;
+            if (!year.equals("0000"))
+                dates.add(date);
+        }
 
         return dates;
     }
@@ -395,23 +416,38 @@ public class NetcdfFileReader {
      * @param latMax Latitude Maximum
      * @param lonMin Longitude Minimum
      * @param lonMax Longitude Maximum
-     * @return Polygon GeoJSON Object of corners (@Todo: Can be changed to Feature)
+     * @return Polygon GeoJSON Object of corners
      */
-    private WildfireAttribute calculateCorners(float latMin, float latMax, float lonMin, float lonMax) {
-        Position topLeft = new Position(latMin, lonMin);
-        Position topRight = new Position(latMin, lonMax);
-        Position botRight = new Position(latMax, lonMax);
-        Position botLeft = new Position(latMin, lonMax);
+    private GeoJsonPolygon calculateCorners(float latMin, float latMax, float lonMin, float lonMax) {
+        Point topLeft = new Point(latMin, lonMax);
+        Point topRight = new Point(latMax, lonMax);
+        Point botRight = new Point(latMax, lonMin);
+        Point botLeft = new Point(latMin, lonMin);
 
-        Position[] positions = {topLeft, topRight, botRight, botLeft, topLeft};
-        PolygonCoordinates corners = new PolygonCoordinates(Arrays.asList(positions));
+        return new GeoJsonPolygon(List.of(topLeft, topRight, botRight, botLeft));
+    }
 
-        WildfireAttribute cornerAttribute = new WildfireAttribute();
+    private String[] parseName(String fileName) {
+        Pattern pattern = Pattern.compile("(.*).+?d([0-9][0-9]).?([0-9][0-9][0-9][0-9])?.?([0-9][0-9])?.?([0-9][0-9])?.?([0-9][0-9])?.?([0-9][0-9])?.?([0-9][0-9])?");
+        Matcher matcher = pattern.matcher(fileName);
 
-        cornerAttribute.attributeName = "Corners";
-        cornerAttribute.type = "Polygon";
-        cornerAttribute.value = new Polygon(corners);
-
-        return cornerAttribute;
+        String fileType = null;
+        String domain = null;
+        String year = "0000";
+        String month="00";
+        String day="00";
+        String hour="00";
+        String min="00";
+        String sec="00";
+        if(matcher.find()) {
+            year = (matcher.group(3) == null) ? "0000" : matcher.group(3); //Year
+            month = (matcher.group(4) == null) ? "00" : matcher.group(4); //Month
+            day = (matcher.group(5) == null) ? "00" : matcher.group(5); //Day
+            hour = (matcher.group(6) == null) ? "00" : matcher.group(6); //Hour
+            min = (matcher.group(7) == null) ? "00" : matcher.group(7); //Minute
+            sec = (matcher.group(8) == null) ? "00" : matcher.group(8); //Seconds
+        }
+        String date = String.format("%s %s %s %s %s %s", year, month, day, hour, min, sec);
+        return new String[]{fileType, domain, date};
     }
 }
